Add closed hours functionality and create closed page template

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -125,6 +125,7 @@
         <a href="/">← Back</a>
         <a href="/leaderboard">Leaderboard</a>
         <a href="/admin/device">Device</a>
+        <a href="/closed">Closed Page</a>
         <a href="/admin/logout">Sign out</a>
     </footer>
 
