Add network status to admin page

--- a/templates/admin_device.html
+++ b/templates/admin_device.html
@@ -237,6 +237,7 @@
 
     <footer>
         <a href="/admin">Back to Admin</a>
+        <a href="/admin/device/network">Network Status</a>
         <a href="/">Home</a>
     </footer>
 </body>
