--- a/templates/profile.html
+++ b/templates/profile.html
@@ -83,6 +83,7 @@
 
     <footer>
         <a href="/">← Back</a>
+        <a href="/tap/reset">Reset tap cookie</a>
         <a href="/logout">Sign out</a>
     </footer>
 </body>
