--- a/templates/tap.html
+++ b/templates/tap.html
@@ -24,8 +24,8 @@
             border: 3px ridge #4499D9;
             color: #fff;
         }
-        .tap-btn.in { background: #2a7d2a; }
-        .tap-btn.out { background: #a00; }
+        .tap-btn.in { background: #4499D9; }
+        .tap-btn.out { background: #fff; color: #333; }
     </style>
 </head>
 <body>
