--- a/templates/_present_list.html
+++ b/templates/_present_list.html
@@ -1,7 +1,7 @@
 {% if present %}
 <div class="member-grid">
     {% for member in present %}
-    <div class="member-item" data-category="{{ member.rowing_category or 'unknown' }}">
+    <div class="member-item{% if member.id == '06b3db4b4b86' %} sparkle{% endif %}" data-category="{{ member.rowing_category or 'unknown' }}">
         <div class="photo">
             {% if member.profile_picture %}
             <img src="/static/uploads/{{ member.profile_picture }}" alt="{{ member.name }}">
